--- a/app/src/main/res/layout/jisho_tomo_jlpt_widget.xml
+++ b/app/src/main/res/layout/jisho_tomo_jlpt_widget.xml
@@ -70,16 +70,11 @@
       android:id="@+id/widget_level"
       android:layout_below="@id/widget_toolbar"
       android:layout_alignParentRight="true"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginTop="4dp"
-      android:padding="4dp"
-      android:background="@drawable/rounded_corner_dark_bg"
-      android:textColor="@android:color/primary_text_dark"
-      android:textSize="14sp"
       tools:text="N5"
+      style="@style/dark_pill"
       />
 
 </RelativeLayout>
