--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -23,6 +23,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_results_rv"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
