add Firebase and Analytics events

--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -162,8 +162,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:onClick="@{() -> presenter.toggleFavorite()}"
-        android:src="@{presenter.entry.favorited ? @drawable/ic_star : @drawable/ic_star_border }"
+        android:onClick="@{() -> presenter.toggleFavorite(context)}"
+        android:src="@{safeUnbox(presenter.entry.favorited) ? @drawable/ic_star : @drawable/ic_star_border }"
         />
 
   </android.support.design.widget.CoordinatorLayout>
