--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -7,4 +7,10 @@
       android:icon="@drawable/ic_search_white"
       app:showAsAction="ifRoom|collapseActionView"
       app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+  <item
+      android:id="@+id/menu_export"
+      android:title="@string/export"
+      android:icon="@drawable/ic_file_download"
+      app:showAsAction="ifRoom"/>
 </menu>
