--- a/app/src/main/res/layout/list_item_sense.xml
+++ b/app/src/main/res/layout/list_item_sense.xml
@@ -17,6 +17,7 @@
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:focusable="true"
       android:paddingBottom="24dp"
       >
 
