textviews with mixed languages work with talkback

--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/def_alt_kanji_header"
             app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            android:text="@{presenter.getAlternateKanji()}"
+            textInJapanese="@{presenter.getAlternateKanji()}"
             android:textSize="@dimen/text_size_body"
             tools:text="ネコジャラシ"
             visibleOrGone="@{presenter.hasAlternateKanji()}"
@@ -136,7 +136,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/def_alt_readings_header"
             app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            android:text="@{presenter.getAlternateReadings()}"
+            textInJapanese="@{presenter.getAlternateReadings()}"
             android:textSize="@dimen/text_size_body"
             tools:text="ネコジャラシ"
             visibleOrGone="@{presenter.hasAlternateReadings()}"
