--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,4 +44,14 @@
     <item name="android:textSize">14sp</item>
   </style>
 
+  <style name="xref_button" parent="Theme.AppCompat.Light.DarkActionBar">
+    <item name="android:textSize">@dimen/text_size_body</item>
+    <item name="android:textColor">@color/colorAccent</item>
+    <item name="android:background">@color/lineGray</item>
+    <item name="android:padding">8dp</item>
+    <item name="android:layout_marginRight">8dp</item>
+    <item name="android:layout_marginLeft">8dp</item>
+    <item name="android:textAlignment">center</item>
+  </style>
+
 </resources>
