--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
   <dimen name="nav_header_vertical_spacing">8dp</dimen>
   <dimen name="nav_header_height">176dp</dimen>
   <dimen name="fab_margin">16dp</dimen>
+  <dimen name="cross_ref_button_margin">4dp</dimen>
 
   <dimen name="text_size_body">20sp</dimen>
   <dimen name="text_size_list_heading">30sp</dimen>
