--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -21,13 +21,11 @@
         android:id="@+id/li_kanji"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingEnd="16dp"
-        android:paddingRight="16dp"
         android:singleLine="true"
         textInJapanese="@{presenter.getKanjiOrReading()}"
         android:textSize="@dimen/text_size_list_heading"
@@ -41,8 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:ellipsize="end"
+        android:textAlignment="viewStart"
         android:maxLines="1"
         android:singleLine="true"
         textInJapanese="@{presenter.getReading()}"
@@ -65,6 +63,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
+        android:textAlignment="viewStart"
         android:text="@{presenter.getPrimaryGloss()}"
         android:textSize="@dimen/text_size_body"
         app:fontFamily="sans-serif"
