start tablet layout modifications

--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -60,12 +60,11 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="4dp"
         android:paddingBottom="24dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:singleLine="true"
         android:textAlignment="viewStart"
         android:text="@{presenter.getPrimaryGloss()}"
+        variableEllipsize="@{context}"
         android:textSize="@dimen/text_size_body"
+        android:lineSpacingMultiplier="1.2"
         app:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/li_kanji"
