--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -1,181 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.activities.DefinitionActivity"
+    >
 
-  <data>
-    <import type="net.emojiparty.android.jishotomo.data.SemicolonSplit"/>
-    <variable
-        name="presenter"
-        type="net.emojiparty.android.jishotomo.data.models.EntryWithAllSenses"
-        />
-  </data>
-
-  <android.support.design.widget.CoordinatorLayout
+  <android.support.design.widget.AppBarLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      tools:context=".ui.activities.DefinitionActivity"
+      android:layout_height="wrap_content"
+      android:theme="@style/AppTheme.AppBarOverlay"
       >
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        >
-
-      <android.support.v7.widget.Toolbar
-          android:id="@+id/toolbar"
-          android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize"
-          android:background="?attr/colorPrimary"
-          app:popupTheme="@style/AppTheme.PopupOverlay"
-          />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="?attr/actionBarSize"
-        android:clipToPadding="false"
-        >
-
-      <android.support.constraint.ConstraintLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:paddingBottom="72dp"
-          android:paddingEnd="16dp"
-          android:paddingLeft="16dp"
-          android:paddingRight="16dp"
-          android:paddingStart="16dp"
-          android:paddingTop="24dp"
-          app:layout_behavior="@string/appbar_scrolling_view_behavior"
-          >
-
-        <TextView
-            android:id="@+id/def_reading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            textInJapanese="@{presenter.getReading()}"
-            android:textSize="@dimen/text_size_body"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="ねこじゃらし"
-            visibleOrGone="@{presenter.hasKanji()}"
-            />
-
-        <TextView
-            android:id="@+id/def_kanji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            textInJapanese="@{presenter.getKanjiOrReading()}"
-            android:textSize="@dimen/text_size_headline"
-            app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            app:layout_constraintStart_toStartOf="@id/def_reading"
-            app:layout_constraintTop_toBottomOf="@id/def_reading"
-            tools:text="猫じゃらし"
-            />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/senses_rv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/def_kanji"
-            />
-
-        <View
-            android:id="@+id/sense_divider"
-            style="@style/divider_full_width"
-            app:layout_constraintTop_toBottomOf="@id/senses_rv"
-            app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            app:layout_constraintStart_toStartOf="@id/def_reading"
-            />
-
-        <TextView
-            android:id="@+id/def_alt_kanji_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:paddingTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/senses_rv"
-            app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            app:layout_constraintStart_toStartOf="@id/def_reading"
-            android:text="@string/alt_kanji"
-            visibleOrGone="@{presenter.hasAlternateKanji()}"
-            style="@style/small_caps"
-            />
-
-        <TextView
-            android:id="@+id/def_alt_kanji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/def_alt_kanji_header"
-            app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            app:layout_constraintStart_toStartOf="@id/def_reading"
-            textInJapanese="@{presenter.getAlternateKanji()}"
-            android:textSize="@dimen/text_size_body"
-            tools:text="ネコジャラシ"
-            visibleOrGone="@{presenter.hasAlternateKanji()}"
-            />
-
-        <TextView
-            android:id="@+id/def_alt_readings_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:paddingTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/def_alt_kanji"
-            app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            app:layout_constraintStart_toStartOf="@id/def_reading"
-            android:text="@string/alt_readings"
-            visibleOrGone="@{presenter.hasAlternateReadings()}"
-            style="@style/small_caps"
-            />
-
-        <TextView
-            android:id="@+id/def_alt_readings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/def_alt_readings_header"
-            app:layout_constraintLeft_toLeftOf="@id/def_reading"
-            app:layout_constraintStart_toStartOf="@id/def_reading"
-            textInJapanese="@{presenter.getAlternateReadings()}"
-            android:textSize="@dimen/text_size_body"
-            tools:text="ネコジャラシ"
-            visibleOrGone="@{presenter.hasAlternateReadings()}"
-            />
-        <TextView
-            android:id="@+id/def_level"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            jlptPill="@{presenter.entry.getJlptLevel()}"
-            tools:text="N1"
-            style="@style/dark_pill"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-      </android.support.constraint.ConstraintLayout>
-
-    </android.support.v4.widget.NestedScrollView>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:onClick="@{() -> presenter.toggleFavorite(context)}"
-        android:contentDescription="@{safeUnbox(presenter.entry.favorited) ? @string/remove_from_favorites : @string/add_to_favorites }"
-        android:src="@{safeUnbox(presenter.entry.favorited) ? @drawable/ic_star : @drawable/ic_star_border }"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
         />
 
-  </android.support.design.widget.CoordinatorLayout>
-</layout>
+  </android.support.design.widget.AppBarLayout>
+
+  <fragment
+      android:id="@+id/definition_fragment"
+      android:name="net.emojiparty.android.jishotomo.ui.activities.DefinitionFragment"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      />
+
+</android.support.design.widget.CoordinatorLayout>
