removed variable ellipsis

--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -63,9 +63,10 @@
         android:paddingBottom="24dp"
         android:textAlignment="viewStart"
         android:text="@{presenter.getPrimaryGloss()}"
-        variableEllipsize="@{context}"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
         android:textSize="@dimen/text_size_body"
-        android:lineSpacingMultiplier="1.2"
         app:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/li_kanji"
