--- a/app/src/main/res/layout-sw600dp/content_drawer.xml
+++ b/app/src/main/res/layout-sw600dp/content_drawer.xml
@@ -18,6 +18,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".ui.activities.DrawerActivity"
         tools:showIn="@layout/app_bar_drawer"
+        android:paddingTop="?attr/actionBarSize"
         >
 
       <ProgressBar
