--- a/app/src/main/res/layout/fragment_definition.xml
+++ b/app/src/main/res/layout/fragment_definition.xml
@@ -37,6 +37,18 @@
           >
 
         <TextView
+            android:id="@+id/empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_body"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            android:text="@string/select_something"
+            />
+
+        <TextView
             android:id="@+id/def_reading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
