add to backstack when using definition fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
   <color name="colorAccent">#FF4081</color>
   <color name="lineGray">#dddddd</color>
   <color name="defaultTextColor">#404040</color>
+  <color name="background">#ffffff</color>
 </resources>
