--- a/app/src/main/res/layout/fragment_definition.xml
+++ b/app/src/main/res/layout/fragment_definition.xml
@@ -13,6 +13,7 @@
   </data>
 
   <FrameLayout
+      android:background="@color/background"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
