--- a/app/src/main/res/layout/fragment_definition.xml
+++ b/app/src/main/res/layout/fragment_definition.xml
@@ -170,6 +170,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:elevation="@dimen/fab_elevation"
         android:contentDescription="@{safeUnbox(presenter.entry.favorited) ? @string/remove_from_favorites : @string/add_to_favorites }"
         android:onClick="@{() -> presenter.toggleFavorite(context)}"
         android:src="@{safeUnbox(presenter.entry.favorited) ? @drawable/ic_star : @drawable/ic_star_border }"
