--- a/app/src/main/res/layout/app_bar_drawer.xml
+++ b/app/src/main/res/layout/app_bar_drawer.xml
@@ -19,6 +19,7 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:background="?attr/colorPrimary"
+        app:elevation="@dimen/app_bar_elevation"
         app:popupTheme="@style/AppTheme.PopupOverlay">
 
       <TextView
