--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
   <dimen name="widget_margin">8dp</dimen>
+
+  <dimen name="fab_elevation">6dp</dimen>
+  <dimen name="app_bar_elevation">4dp</dimen>
 </resources>
