--- a/app/src/main/res/drawable/rounded_corner_dark_bg.xml
+++ b/app/src/main/res/drawable/rounded_corner_dark_bg.xml
@@ -4,8 +4,8 @@
     android:shape="rectangle">
 
   <corners android:radius="4dp"/>
-  <solid android:color="@android:color/background_dark"/>
+  <solid android:color="@color/defaultTextColor"/>
   <stroke
-      android:color="@android:color/background_dark"
+      android:color="@color/defaultTextColor"
       android:width="1dp"/>
 </shape>
