--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -22,6 +22,8 @@
       android:layout_height="match_parent"
       android:layout_gravity="start"
       android:fitsSystemWindows="true"
+      app:itemIconTint="@color/defaultTextColor"
+      android:background="@color/background"
       app:headerLayout="@layout/nav_header_drawer"
       app:menu="@menu/activity_drawer_drawer"
       />
