--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -8,6 +8,7 @@
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:background="@color/background"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       tools:context=".ui.activities.DrawerActivity"
       tools:showIn="@layout/app_bar_drawer"
