--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
-  <color name="colorAccent">#FF4081</color>
+  <color name="colorPrimary">#2e7d32</color>
+  <color name="colorPrimaryDark">#005005</color>
+  <color name="colorPrimaryLight">#60ad5e</color>
+  <color name="colorAccent">#ef9a9a</color>
+  <color name="secondaryLightColor">#ffcccb</color>
+  <color name="secondaryDarkColor">#ba6b6c</color>
   <color name="lineGray">#dddddd</color>
   <color name="defaultTextColor">#404040</color>
   <color name="background">#ffffff</color>
+
+  <color name="primaryTextColor">#ffffff</color>
+  <color name="secondaryTextColor">#000000</color>
 </resources>
