--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
   <dimen name="cross_ref_button_margin">4dp</dimen>
 
   <dimen name="text_size_body">20sp</dimen>
+  <dimen name="text_size_button">24sp</dimen>
   <dimen name="text_size_list_heading">30sp</dimen>
   <dimen name="text_size_headline">36sp</dimen>
 
