--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,10 +45,13 @@
   </style>
 
   <style name="xref_button" parent="Theme.AppCompat.Light.DarkActionBar">
-    <item name="android:textSize">@dimen/text_size_body</item>
-    <item name="android:textColor">@color/colorAccent</item>
-    <item name="android:background">@color/lineGray</item>
-    <item name="android:padding">8dp</item>
+    <item name="android:textSize">@dimen/text_size_button</item>
+    <item name="android:textColor">@color/secondaryTextColor</item>
+    <item name="android:background">@color/secondaryLightColor</item>
+    <item name="android:paddingTop">8dp</item>
+    <item name="android:paddingBottom">8dp</item>
+    <item name="android:paddingLeft">10dp</item>
+    <item name="android:paddingRight">10dp</item>
     <item name="android:layout_marginRight">8dp</item>
     <item name="android:layout_marginLeft">8dp</item>
     <item name="android:textAlignment">center</item>
