--- a/app/src/main/res/layout-sw600dp/content_drawer.xml
+++ b/app/src/main/res/layout-sw600dp/content_drawer.xml
@@ -3,7 +3,8 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
   <LinearLayout
       android:layout_width="match_parent"
@@ -15,20 +16,21 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
+        android:background="@color/background"
+        android:paddingTop="?attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".ui.activities.DrawerActivity"
         tools:showIn="@layout/app_bar_drawer"
-        android:paddingTop="?attr/actionBarSize"
         >
 
       <ProgressBar
           android:id="@+id/exporting"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          style="@style/Widget.AppCompat.ProgressBar.Horizontal"
           android:layout_gravity="top"
           android:indeterminate="false"
           android:visibility="gone"
+          style="@style/Widget.AppCompat.ProgressBar.Horizontal"
           />
 
       <ProgressBar
@@ -40,12 +42,14 @@
 
       <android.support.v7.widget.RecyclerView
           android:id="@+id/search_results_rv"
-          app:layoutManager="android.support.v7.widget.LinearLayoutManager"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
+          app:layoutManager="android.support.v7.widget.LinearLayoutManager"
           />
 
     </FrameLayout>
+
+    <View style="@style/divider_full_height"/>
 
     <FrameLayout
         android:id="@+id/definition_fragment_container"
