--- a/app/src/main/res/layout/jisho_tomo_jlpt_widget_configure.xml
+++ b/app/src/main/res/layout/jisho_tomo_jlpt_widget_configure.xml
@@ -15,7 +15,7 @@
       android:paddingRight="16dp"
       android:text="@string/configure"
       android:textColor="@android:color/primary_text_dark"
-      android:textSize="20sp"
+      android:textSize="@dimen/text_size_body"
       />
 
   <TextView
