--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,206 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108"
-    android:width="108dp">
-  <path
-      android:fillType="evenOdd"
-      android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-      android:strokeColor="#00000000"
-      android:strokeWidth="1">
-    <aapt:attr name="android:fillColor">
-      <gradient
-          android:endX="78.5885"
-          android:endY="90.9159"
-          android:startX="48.7653"
-          android:startY="61.0927"
-          android:type="linear">
-        <item
-            android:color="#44000000"
-            android:offset="0.0"/>
-        <item
-            android:color="#00000000"
-            android:offset="1.0"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:fillColor="#FFFFFF"
-      android:fillType="nonZero"
-      android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-      android:strokeColor="#00000000"
-      android:strokeWidth="1"/>
+        xmlns:aapt="http://schemas.android.com/aapt"
+        android:width="108dp"
+        android:height="108dp"
+        android:viewportWidth="366.66666"
+        android:viewportHeight="366.66666">
+    <group android:translateX="7.3333335"
+            android:translateY="38.833332">
+      <path
+          android:pathData="M0,0h352v289h-352z"
+          android:strokeWidth="1"
+          android:fillColor="#2E7D32"
+          android:fillType="evenOdd"
+          android:strokeColor="#00000000"/>
+      <path
+          android:pathData="M176,92C176,160.596 176,197.436 176,202.519C172.448,202.519 172.144,202.519 162.875,202.519C160.678,202.519 158.28,193.976 156.256,193.976C154.307,193.976 156.256,193.976 90.377,208C89.868,208.108 89.88,172.145 90.377,103.183C90.381,102.521 118.923,98.793 176,92ZM176,92C233.077,98.793 261.619,102.521 261.623,103.183C262.12,172.145 262.132,208.108 261.623,208C195.744,193.976 197.693,193.976 195.744,193.976C193.72,193.976 191.322,202.519 189.125,202.519C179.856,202.519 179.552,202.519 176,202.519C176,197.436 176,160.596 176,92Z"
+          android:strokeLineJoin="round"
+          android:strokeWidth="3"
+          android:fillColor="#005005"
+          android:strokeColor="#005005"
+          android:fillType="evenOdd"
+          android:strokeLineCap="round"/>
+      <path
+          android:pathData="M178,95.397C199.608,89.799 215.603,87 225.983,87C234.281,87 246.037,90.283 258,100.307C258,113.23 258,146.801 258,201.02C222.245,189.876 200.149,185.291 191.712,187.265C187.574,188.232 183.004,191.641 178,197.489C172.996,191.641 168.426,188.232 164.288,187.265C155.851,185.291 132.089,189.876 93,201.02C93,146.801 93,113.23 93,100.307C104.963,90.283 121.719,87 130.017,87C140.397,87 156.392,89.799 178,95.397Z"
+          android:strokeWidth="1"
+          android:fillColor="#E3E3E3"
+          android:fillType="evenOdd"
+          android:strokeColor="#00000000"/>
+      <path
+          android:pathData="M93,201.02L98.72,193.256L153.223,183.263C156.451,183.052 158.849,183.052 160.419,183.263C161.989,183.473 164.193,184.09 167.029,185.112C168.42,185.544 169.824,186.227 171.241,187.162C172.657,188.097 174.802,189.757 177.675,192.141C181.621,188.481 184.712,186.138 186.948,185.112C189.183,184.086 192.542,183.47 197.024,183.263C199.518,183.142 204.432,183.759 211.767,185.112C219.102,186.466 232.238,189.181 251.175,193.256L258.621,201.02C243.002,196.224 230.955,192.938 222.48,191.164C214.005,189.389 203.992,188.055 192.442,187.162C188.774,188.125 186.07,189.247 184.33,190.529C182.589,191.811 180.371,194.315 177.675,198.041C175.654,194.827 173.745,192.534 171.947,191.164C170.15,189.793 167.302,188.459 163.405,187.162C151.32,188.059 140.779,189.393 131.783,191.164C122.787,192.934 109.859,196.22 93,201.02Z"
+          android:strokeWidth="1"
+          android:fillColor="#000000"
+          android:fillAlpha="0.25"
+          android:fillType="evenOdd"
+          android:strokeColor="#00000000"/>
+      <path
+          android:pathData="M178,95.397C199.608,89.799 215.603,87 225.983,87C234.281,87 246.037,90.283 258,100.307C258,113.23 258,146.801 258,201.02C222.245,189.876 200.149,185.291 191.712,187.265C187.574,188.232 183.004,191.641 178,197.489C172.996,191.641 168.426,188.232 164.288,187.265C155.851,185.291 132.089,189.876 93,201.02C93,146.801 93,113.23 93,100.307C104.963,90.283 121.719,87 130.017,87C140.397,87 156.392,89.799 178,95.397Z"
+          android:strokeLineJoin="round"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M178,193.256C174.182,189.405 171.298,186.981 169.349,185.985C162.489,182.481 155.552,182.796 148.887,183.826C139.38,185.296 122.657,188.439 98.72,193.256C98.72,141.215 98.72,108.734 98.72,95.811C111.896,86.311 126.717,81 135.014,81C145.344,81 159.508,82.852 177.505,86.555C196.162,82.852 210.656,81 220.986,81C229.283,81 237.448,86.311 250.625,95.811C250.625,108.734 250.75,141.464 251,194C231.249,188.687 216.62,185.296 207.113,183.826C200.448,182.796 193.511,182.481 186.651,185.985C184.702,186.981 181.818,189.405 178,193.256Z"
+          android:strokeLineJoin="round"
+          android:strokeWidth="1"
+          android:fillColor="#ECECEC"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M178,86.432L178,193.256"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M178,86.626L178,192C173.227,187.751 169.56,185.066 167,183.946C164.44,182.825 160.773,182.3 156,182.372L156,83L178,86.626Z"
+          android:strokeWidth="1"
+          android:fillType="evenOdd"
+          android:strokeColor="#00000000">
+        <aapt:attr name="android:fillColor">
+          <gradient 
+              android:startY="137.5"
+              android:startX="156"
+              android:endY="137.5"
+              android:endX="169.9467"
+              android:type="linear">
+            <item android:offset="0" android:color="#00E3E3E3"/>
+            <item android:offset="1" android:color="#FFE0E0E0"/>
+          </gradient>
+        </aapt:attr>
+      </path>
+      <path
+          android:pathData="M251,96.082L251,194C246.68,192.743 243.567,191.86 241.663,191.351C238.459,190.494 234.737,189.811 233.392,189.222C230.849,188.107 223.051,186.249 210,183.649L210,81.506C216.818,80.499 223.04,80.995 228.666,82.995C234.293,84.995 241.737,89.358 251,96.082Z"
+          android:strokeWidth="1"
+          android:fillType="evenOdd"
+          android:strokeColor="#00000000">
+        <aapt:attr name="android:fillColor">
+          <gradient 
+              android:startY="137.2495"
+              android:startX="210"
+              android:endY="137.2495"
+              android:endX="235.99158"
+              android:type="linear">
+            <item android:offset="0" android:color="#00E3E3E3"/>
+            <item android:offset="1" android:color="#FFE0E0E0"/>
+          </gradient>
+        </aapt:attr>
+      </path>
+      <path
+          android:pathData="M107.5,108.5C117.283,102.579 125.628,98.98 132.535,97.703C139.443,96.426 150.316,97.323 165.154,100.394"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M107.5,118.5C117.338,112.579 125.711,108.98 132.618,107.703C139.526,106.426 150.35,107.293 165.09,110.305"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M107.5,128.5C117.225,122.579 125.542,118.98 132.449,117.703C139.357,116.426 150.32,117.152 165.339,119.881"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M107.5,138.5C117.553,132.579 126.034,128.98 132.941,127.703C139.849,126.426 150.604,127.095 165.208,129.71"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M107.5,148.5C117.805,142.579 126.411,138.98 133.318,137.703C140.226,136.426 150.836,136.93 165.147,139.215"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M107.5,158.5C117.97,152.579 126.659,148.98 133.566,147.703C140.474,146.426 151.069,146.426 165.352,147.703"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M107.5,168.5C118.549,162.579 127.528,158.98 134.436,157.703C141.343,156.426 151.553,156.426 165.066,157.703"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M107.5,178.5C118.476,173.429 127.418,170.255 134.325,168.978C141.233,167.701 151.48,167.276 165.066,167.703"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,108.5C235.717,102.579 227.372,98.98 220.465,97.703C213.557,96.426 202.684,97.323 187.846,100.394"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,118.5C235.662,112.579 227.289,108.98 220.382,107.703C213.474,106.426 202.65,107.293 187.91,110.305"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,128.5C235.775,122.579 227.458,118.98 220.551,117.703C213.643,116.426 202.68,117.152 187.661,119.881"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,138.5C235.447,132.579 226.966,128.98 220.059,127.703C213.151,126.426 202.396,127.095 187.792,129.71"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,148.5C235.195,142.579 226.589,138.98 219.682,137.703C212.774,136.426 202.164,136.93 187.853,139.215"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,158.5C235.03,152.579 226.341,148.98 219.434,147.703C212.526,146.426 201.931,146.426 187.648,147.703"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,168.5C234.451,162.579 225.472,158.98 218.564,157.703C211.657,156.426 201.447,156.426 187.934,157.703"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+      <path
+          android:pathData="M245.5,178.5C234.524,173.429 225.582,170.255 218.675,168.978C211.767,167.701 201.52,167.276 187.934,167.703"
+          android:strokeWidth="1"
+          android:fillColor="#00000000"
+          android:strokeColor="#B0B0B0"
+          android:fillType="evenOdd"
+          android:strokeLineCap="square"/>
+    </group>
 </vector>
