--- a/app/src/main/res/layout/jisho_tomo_jlpt_widget.xml
+++ b/app/src/main/res/layout/jisho_tomo_jlpt_widget.xml
@@ -12,8 +12,8 @@
       android:id="@+id/widget_toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingRight="4dp"
-      android:paddingLeft="4dp"
+      android:paddingEnd="4dp"
+      android:paddingStart="4dp"
       android:paddingTop="6dp"
       android:paddingBottom="6dp"
       android:background="@color/colorPrimary"
@@ -22,6 +22,7 @@
       android:ellipsize="end"
       android:maxLines="1"
       android:singleLine="true"
+      android:textAlignment="viewStart"
       android:text="@string/word_of_the_day"
       />
 
@@ -32,12 +33,13 @@
       android:layout_below="@id/widget_toolbar"
       android:ellipsize="end"
       android:maxLines="1"
-      android:paddingLeft="@dimen/widget_internal_padding"
-      android:paddingRight="@dimen/widget_jlpt_level_padding"
+      android:paddingStart="@dimen/widget_internal_padding"
+      android:paddingEnd="@dimen/widget_jlpt_level_padding"
       android:paddingTop="4dp"
       android:singleLine="true"
       android:textColor="@color/defaultTextColor"
       android:textSize="14sp"
+      android:textAlignment="viewStart"
       tools:text="フィルターフィルター"
       android:visibility="gone"
       />
@@ -48,10 +50,11 @@
       android:layout_below="@id/widget_reading"
       android:ellipsize="end"
       android:maxLines="1"
-      android:paddingLeft="@dimen/widget_internal_padding"
-      android:paddingRight="@dimen/widget_jlpt_level_padding"
+      android:paddingStart="@dimen/widget_internal_padding"
+      android:paddingEnd="@dimen/widget_jlpt_level_padding"
       android:singleLine="true"
       android:textColor="@color/defaultTextColor"
+      android:textAlignment="viewStart"
       android:textSize="22sp"
       tools:text="フィルター"
       />
@@ -60,19 +63,19 @@
       android:layout_below="@id/widget_kanji"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingLeft="@dimen/widget_internal_padding"
-      android:paddingRight="@dimen/widget_internal_padding"
+      android:paddingStart="@dimen/widget_internal_padding"
+      android:paddingEnd="@dimen/widget_internal_padding"
       android:textColor="@color/defaultTextColor"
       android:textSize="14sp"
+      android:textAlignment="viewStart"
       tools:text="south of the border, west of the sun"
       />
 
   <TextView
       android:id="@+id/widget_level"
       android:layout_below="@id/widget_toolbar"
-      android:layout_alignParentRight="true"
+      android:layout_alignParentEnd="true"
       android:layout_marginEnd="8dp"
-      android:layout_marginRight="8dp"
       android:layout_marginTop="4dp"
       tools:text="N5"
       style="@style/dark_pill"
