--- a/app/src/main/res/layout-sw600dp/content_drawer.xml
+++ b/app/src/main/res/layout-sw600dp/content_drawer.xml
@@ -40,11 +40,11 @@
           android:layout_gravity="center"
           />
 
-      <android.support.v7.widget.RecyclerView
+      <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/search_results_rv"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           />
 
     </FrameLayout>
