--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -6,7 +6,7 @@
       android:title="@string/action_search"
       android:icon="@drawable/ic_search_white"
       app:showAsAction="ifRoom|collapseActionView"
-      app:actionViewClass="android.support.v7.widget.SearchView"/>
+      app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
   <item
       android:id="@+id/menu_export"
