implement no results view, add tests

--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -38,5 +38,16 @@
         android:layout_height="match_parent"
         />
 
+    <TextView
+        android:id="@+id/no_results"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textSize="@dimen/text_size_body"
+        app:fontFamily="sans-serif"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
   </FrameLayout>
 </layout>
