--- a/app/src/main/res/layout-sw600dp/content_drawer.xml
+++ b/app/src/main/res/layout-sw600dp/content_drawer.xml
@@ -47,6 +47,17 @@
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           />
 
+      <TextView
+          android:id="@+id/no_results"
+          android:layout_marginTop="24dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp"
+          android:textSize="@dimen/text_size_body"
+          app:fontFamily="sans-serif"
+          android:visibility="gone"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+
     </FrameLayout>
 
     <View style="@style/divider_full_height"/>
