eliminate straggling findViewByIds in favor of kotlin synthetic views

--- a/app/src/main/res/layout/fragment_definition.xml
+++ b/app/src/main/res/layout/fragment_definition.xml
@@ -37,7 +37,7 @@
           >
 
         <TextView
-            android:id="@+id/empty"
+            android:id="@+id/no_entry_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size_body"
